--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mortgage Repayment Calculator</title>
   </head>
-  <body class="font-jakarta text-base">
+  <body class="font-jakarta text-base h-screen sm:flex sm:flex-col justify-center items-center">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
