--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mortgage Repayment Calculator</title>
   </head>
-  <body class="font-jakarta text-base h-screen sm:flex sm:flex-col justify-center items-center">
+  <body
+    class="font-jakarta text-base h-screen md:flex md:flex-col justify-center items-center bg-slate-100 selection:bg-slate-700 selection:text-white"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
