Implement desktop and mobile responsive designs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Mortgage Repayment Calculator</title>
   </head>
   <body
-    class="font-jakarta text-base h-screen md:flex md:flex-col justify-center items-center bg-slate-100 selection:bg-slate-700 selection:text-white"
+    class="font-jakarta text-base h-screen md:flex md:flex-col justify-center items-center bg-slate-100 selection:bg-slate-700 selection:text-white md:text-sm"
   >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
